--- a/AppVista/app/build.gradle
+++ b/AppVista/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.material:material:1.0.0-alpha1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation "com.github.armcha:SpaceNavigationView:1.6.0"
 }
